Harden core/eval and autoresearch examples from review feedback
Addresses findings from the pre-release security + ergonomics review:

  Security
    - CodeCoachTools.resolveInScope now canonicalizes paths via toRealPath()
      and anchors scope on the real repo root, rejecting symlink-based
      scope-escape attempts (tested)
    - GitWorkspace constructor requires an existing directory and stores
      its canonical form, protecting every downstream scope check
    - JsonlCodec wraps type-confused fields (string expected, int given)
      in JsonlCodecException instead of leaking ClassCastException, and
      validates segment fits in int before narrowing

  API ergonomics
    - ExperimentStatus is now an enum with wire()/fromWire() — eliminates
      string-based status validation and typo risk at compile time
    - Evaluator requires withInputMapper() explicitly; no silent
      String.valueOf() fallback that would produce Record[field=...] noise
    - EvalException replaces raw RuntimeException thrown by evaluator
      workers, matching the house pattern (PgException, ReplException)
    - Evaluator's manual Semaphore + Future plumbing collapses into
      CompletableFuture.supplyAsync on a virtual-thread executor
    - All new builders throw IllegalStateException (was IllegalArgument),
      matching MemoryBlock/AgentConfig
    - Result-unwrap instanceof ladders become pattern-match switch
      expressions
    - ExperimentEntry.newBuilder(existing) copy constructor added
    - InMemoryExperimentLog.segment() uses Stream.toList()
    - Dead helpers (PromptOptimizer.confidence, CodeCoachTools.keepImport)
      removed

  CodeAutoresearch destructive-op guard
    - Builder.build() now refuses to run on a dirty working tree by
      default; callers must opt in via withAllowDirtyRepo(true). Prevents
      silent 'git add -A' / 'git clean -fd' on a user's uncommitted work
    - GitWorkspace commit/discardWorkingChanges javadoc flags the
      destructive behavio